extends Node



func _on_Button_0_pressed():
	SoundManager.play_fixed_sound("placed")


func _on_Button_1_pressed():
	SoundManager.play_fixed_sound("placed")


func _on_Button_2_pressed():
	SoundManager.play_fixed_sound("placed")


func _on_Button_3_pressed():
	SoundManager.play_fixed_sound("placed")
